druid/config/druid-virtualservice-helm-azure.yaml
## Virtualservice for installing druid using helm in azure cloud environment
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: druid
  namespace: druid ## Virtualservice will be deployed in the same namespace as druid
spec:
  hosts:
  - "druid.infologistix-cnc.ddnss.org" ## domain name of druid
  gateways:
  - istio-system/istio-ingress-gateway ## Name of istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: druid-router.druid.svc.cluster.local ## url of service of druid-router
        port:
          number: 8888
