druid/config/druid-virtualservice-operator-local.yaml
## Virtualservice for installing druid using operator in your local machine
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: druid
  namespace: druid
spec:
  hosts:
  - "druid.localhost"
  gateways:
  - istio-system/istio-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: druid-tiny-cluster-routers.druid.svc.cluster.local
        port:
          number: 8088
